styles.css
* {
  font-family: 'Rokkitt', sans-serif;
  box-sizing: border-box;
  background-color: #a3b2b0;
}

h1,
#header-div {
  background-color: #f45b69;
}

.main-content {
  height: 620px;
}

.start-dot {
  height: 15px;
  width: 15px;
  border-radius: 50%;
  background: black;
  top: 0;
  left: 0;
  transform: translateY(-50%);
  position: absolute;
}

.end-arrow {
  border-left: 15px solid black;
  border-bottom: 15px solid transparent;
  border-top: 15px solid transparent;
  position: absolute;
  top: 0;
  right: 0;
  transform: translateY(-50%);
  float: right;
}

.event-branch {
  height: 15px;
  width: 1px;
  background: black;
  position: relative;
  left: 50%;
  top: 250px;
}

.timeline {
  top: 240px;
  position: relative;
  border-top: 2px dotted black;
  margin-left: 50px;
  margin-right: 80px;
}

.start {
  position: absolute;
  top: 0;
  left: -40px;
  list-style-type: none;
  border: solid 1px black;
  padding: 4px 8px;
  margin-top: 20px;
  background-color: white;
  box-shadow: 2px 2px #46484a;
}

.events {
  position: absolute;
  top: -50px;
  left: 0;
  list-style-type: none;
  border: solid 1px black;
  padding: 4px 8px;
  margin-top: 13px;
  background-color: white;
  box-shadow: 2px 2px #46484a;
}

.events p {
  background-color: white;
  margin: auto;
}

.end {
  position: absolute;
  top: 0;
  right: -70px;
  list-style-type: none;
  width: 125px;
  border: solid 1px black;
  padding: 4px 8px;
  margin-top: 20px;
  background: white;
  box-shadow: 2px 2px #46484a;
}

.create-button {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
}

/* event form */

#event,
.main {
  max-width: 1440px;
}

#main-header,
#event-header {
  padding-left: 60px;
  padding-top: 20px;
  background-color: #f45b69;
  height: 150px;
}

.start {
  position: absolute;
  top: 0;
  left: 0;
  list-style-type: none;
}

.end {
  position: absolute;
  top: 0;
  right: 0;
  list-style-type: none;
}

.create-button {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
}

.btn-primary {
  background-color: #3d3d71;
  border-color: #29297e;
}

.btn-success {
  background-color: #28794c;
  border-color: #357350;
}

#event,
.main {
  max-width: 1440px;
}

#main-header {
  padding-left: 60px;
  padding-top: 35px;
  background-color: #bc1410;
  height: 150px;
}

h1 {
  background-color: #bc1410;
}

#input-label {
  font-weight: normal;
}

#form-return {
  margin-top: 10px;
}

